perf: 保存全局配置
Signed-off-by: jackhuang <2504448153@qq.com>

--- a/package.json
+++ b/package.json
@@ -69,12 +69,14 @@
         "switch-file.title": {
           "type": "boolean",
           "default": false,
-          "description": "show/hide next file command in editor's title"
+          "description": "show/hide next file command in editor's title",
+          "scope": "application"
         },
         "switch-file.statusBar": {
           "type": "boolean",
           "default": true,
-          "description": "show/hide switch file command in statusBar"
+          "description": "show/hide switch file command in statusBar",
+          "scope": "application"
         }
       }
     }
