--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "switch-file",
   "displayName": "Switch File",
   "description": "Quick switch previous/next file",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "icon": "images/icon.png",
   "repository": {
     "type": "git",
@@ -19,11 +19,10 @@
     "Other"
   ],
   "keywords": [
-    "switch file",
+    "switch sibling file",
     "next/previous file",
-    "切换文件",
-    "上一个文件",
-    "下一个文件"
+    "切换相邻文件",
+    "上/下一个文件"
 ],
   "activationEvents": [
     "onStartupFinished"
